# insearch_wbi

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  imgui copy.ini  imgui.ini  requirements.txt
App/: CMakeLists.txt
App/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
App/src/Excel/: ExcelFileEditable.h
App/src/ImGui/Configs/: SharedConnectionConfigSetup.cpp  SharedConnectionConfigSetup.hpp
App/src/ImGui/Constructions/: SelectConstructionFromTree.cpp  SelectConstructionFromTree.hpp
App/src/ImGui/Img/: ScalableImg.cpp  ScalableImg.h
App/src/ImGui/Overlays/: Overlay.cpp  Overlay.h  ScriptPopup.cpp  ScriptPopup.h
App/src/ImGui/Project/: CreateNewProject.cpp  CreateNewProject.h  OpenProject.h  SetupProject.cpp  SetupProject.h
App/src/ImGui/Project/PageView/: CutByPatternImgPageView.h  IImgPageView.cpp  IImgPageView.h  IPageView.cpp  IPageView.h  PageViewManager.cpp  PageViewManager.h  RawImgPageView.cpp  RawImgPageView.h  XlsxPageView.cpp  XlsxPageView.hpp
App/src/ImGui/Tables/: Table.cpp  Table.h
App/src/Managers/: TextureManager.cpp  TextureManager.h
App/src/Project/: Catalog.h  CatalogCutPattern.cpp  CatalogCutPattern.h  ExcelFolder.hpp  Project.cpp  Project.h  ProjectVariantExcelTables.cpp  ProjectVariantExcelTables.hpp
App/src/Project/Processing/: GenImgsByCutPattern.h  GenRawExcel.h  XlsxPageViewData.cpp  XlsxPageViewData.h
App/src/Python/: PythonCommand.cpp  PythonCommand.h
App/src/Serializer/: Serializer.cpp  Serializer.h
App/src/Utils/: FileFormat.h  FileSystemUtils.h  MakeScreenShoot.cpp  MakeScreenShoot.hpp  MakeScreenshot.cpp  MakeScreenshot.hpp
Engine/: CMakeLists.txt
Engine/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Inputs.h  KeyCodes.h  MouseCodes.h  Timestep.h  Window.cpp  Window.h
Engine/src/Engine/Events/: Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/src/Engine/ImGui/: ImGuiButtonColored.cpp  ImGuiButtonColored.hpp  imgui_impl_glfw.cpp
Engine/src/Engine/ImGui/Fonts/: ImGuiFonts.hpp
Engine/src/Engine/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Engine/Textures/: Texture2D.cpp  Texture2D.h  TextureLoader.cpp  TextureLoader.h
Engine/src/Engine/Utils/: ConsoleLog.cpp  ConsoleLog.h  FileDialogs.cpp  FileDialogs.h  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Utf8Extras.hpp  utf8.h
Engine/src/Platform/OpenGL/Core/: GLFWInputs.cpp  GLFWWindow.cpp  GLFWWindow.h
Engine/src/Platform/OpenGL/Textures/: OGLCalcTextureParameters.cpp  OGLCalcTextureParameters.h  OGLTexture2D.cpp  OGLTexture2D.h
Engine/src/Platform/Windows/Utils/: WindowsFileDiologs.cpp
assets/: last_project.json
assets/constructions/: constructions_tree.json  ctd_fields.json  gen_fields.json  repr_fields copy.json  repr_fields.json
assets/constructions/examples/: ctd_arb_bush.xlsx  ctd_arb_busheccenter.xlsx  ctd_arb_extension.xlsx  ctd_arbm_colletchuck.xlsx  ctd_arbm_drillingchuck.xlsx  ctd_arbm_hydroholdchuck.xlsx  ctd_arbm_morse.xlsx  ctd_arbm_powerchuck.xlsx  ctd_arbm_pullstud.xlsx  ctd_arbm_shellchuck.xlsx  ctd_arbm_shrinkchuck.xlsx  ctd_arbm_tappingattachment.xlsx  ctd_arbm_tappingchuck.xlsx  ctd_arbm_weldonchuck.xlsx  ctd_arbm_wnotchchuck.xlsx  ctd_arbt_2sidecolletholder.xlsx  ctd_arbt_colletturning.xlsx  ctd_bs_adapter1.xlsx  ctd_bs_adapter_coolantb.xlsx  ctd_bs_adapter_coolantholer.xlsx  ctd_bs_arbor.xlsx  ctd_bs_bridge.xlsx  ctd_bs_cart_adj.xlsx  ctd_bs_cart_head.xlsx  ctd_bs_carte.xlsx  ctd_bs_carti_indexable.xlsx  ctd_bs_carti_solid.xlsx  ctd_bs_flange.xlsx  ctd_bs_head.xlsx  ctd_burr.xlsx  ctd_collet_round.xlsx  ctd_collet_spring.xlsx  ctd_collet_tapping.xlsx  ctd_die_2.xlsx  ctd_die_c2.xlsx  ctd_die_f1.xlsx  ctd_die_o1.xlsx  ctd_dih_f1.xlsx  ctd_ds1.xlsx  ctd_ds2.xlsx  (+174 more)
assets/data/: amati_codem.xlsx
assets/fonts/consolas/: COPYRIGHT.txt
assets/scripts/: .pylintrc  InsearchEditorData.py  base.py  cut_by_pattern.py  excel_add_extra_info-yg1-shop.py  excel_add_extra_info.py  extract_tables_to_xlsx.py  img_to_webp.py  imgs_crop.py  imgs_process.py  imgs_remove_bg.py  imgs_to_server_format_and_upload.py  imgs_to_webp.py  import_get_not_exist_adint.py  import_not_exist_adint.py  import_to_server.py  mytesseract.py  pg_shared.py  prepare_img_raw.py  requirements.txt  view_not_exist_adint.py
assets/scripts/pdf_parser/: 1.1_fix_xlsx_from_ocr.py  1.2_check_simple_rules.py  1.3_add_extra_info.py  2_create_sm.py  3_load_db_ctd.py  4_ctd_from_sm_fill.py  TabelExtractor.py  _create_gen_tools_insert_template.py  add_extra_info.py  add_extra_info_drill.py  add_xlsx_headers.py  config copy.json  config.json  custom_regex.py  fix_angle.py  fix_drill_pl.py  fix_xlsx.py  fix_xlsx_naming.py  fix_xlsx_simple.py  get_constr_list.py  glob_requirements.txt  main.py  old_1.3_add_extra_info.py  prepare_img_cv.py  prepare_img_raw.py  r.txt  requirements.txt  shared.py  show_image.py  split_png.py  thread_params.py
assets/scripts/pdf_parser/docs/: tesseract.txt
assets/scripts/pdf_parser/experemets/: exp_eval.py  test.py  test2.py  test_copy.py  test_pd.py  text_re.py
assets/scripts/pdf_parser/in/: ctd_load.xlsx  extra_info_turning.json  fix_rules.json
assets/scripts/pdf_parser/test/: test.py
assets/scripts/pdf_parser/utils/: combine_sheets.py
assets/scripts/pdf_parser/yg1-shop/: 1_01_parse_yg1_inserts.py  1_01_parse_yg1_mill_and_turn_inserts.py  1_02_parse_yg1_mill_holders_tr.py  1_03_parse_yg1_turning_holders_tr.py  1_04_parse_yg1_drill_holders.py  2_yg1_create_sm.py  3_yg1_load_db_ctd.py  4_yg1_ctd_from_sm_fill.py  combine_to_ctd.cmd  exp.py  get_db_tables.py  get_empty_yg1.py  join_dfs.py  pg_shared.py  prepare_yg1_desrc.py  shared.py  shared_inserts.py  shared_yg1.py  simple.py
assets/scripts/yg1parser/: get_images.py  get_props.py  inserts_list.xlsx
